--- a/info.plist
+++ b/info.plist
@@ -295,7 +295,11 @@
 			<integer>390</integer>
 		</dict>
 	</dict>
+	<key>variablesdontexport</key>
+	<array/>
+	<key>version</key>
+	<string>0.0.0.1</string>
 	<key>webaddress</key>
-	<string></string>
+	<string>https://github.com/Torvaney/alfred-timer</string>
 </dict>
 </plist>
