Use launchd to schedule timers

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Build assets
+Timer.alfredworkflow
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
@@ -163,7 +165,8 @@ n
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
