--- a/.github/workflows/create-release-artifact.yml
+++ b/.github/workflows/create-release-artifact.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Build workflow
+      - name: Build Alfred workflow
         run: make all
       - name: Get version number
         id: workflow-version
@@ -18,6 +18,7 @@ jobs:
             sed 's/[^0-9.]*//g'
           )"
       - name: Create release
+        id: create-release
         uses: actions/create-release@v1
         with:
           draft: false
@@ -26,3 +27,13 @@ jobs:
           tag_name: ${{ steps.workflow-version.outputs.WORKFLOW_VERSION }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload Alfred workflow
+        id: upload-workflow
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create-release.outputs.upload_url }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          asset_path: ./Timer.alfredworkflow
+          asset_name: Timer.alfredworkflow
+          asset_content_type: application/zip
