--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Build assets
 Timer.alfredworkflow
 
+.vscode
+
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
